[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.poetry]
name = "vision_agent"
version = "0.1.0"
description = ""
authors = ["chasangho415 <rabbit3274@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.12.4"
altgraph = "^0.17.4"
numpy = "^2.1.3"
opencv-python = "^4.10.0.84"
packaging = "^24.2"
pefile = "^2023.2.7"
pyinstaller = "^6.11.1"
pyinstaller-hooks-contrib = "^2024.10"
PyQt6 = "^6.7.1"
PyQt6-Qt6 = "^6.7.3"
PyQt6_sip = "^13.8.0"
pywin32-ctypes = "^0.2.3"
setuptools = "^75.5.0"

# 추가된 pip freeze 패키지들
anyio = "4.6.2.post1"
argon2-cffi = "23.1.0"
argon2-cffi-bindings = "21.2.0"
arrow = "1.3.0"
asttokens = "2.4.1"
async-lru = "2.0.4"
attrs = "24.2.0"
babel = "2.16.0"
beautifulsoup4 = "4.12.3"
bleach = "6.2.0"
certifi = "2024.8.30"
cffi = "1.17.1"
charset-normalizer = "3.4.0"
colorama = "0.4.6"
comm = "0.2.2"
contourpy = "1.3.0"
cycler = "0.12.1"
debugpy = "1.8.8"
decorator = "5.1.1"
defusedxml = "0.7.1"
executing = "2.1.0"
fastjsonschema = "2.20."
fonttools = "4..54."
fqdn=  "1..51."
h11=  ".14."
httpcore=  ".06."
httpx=  ".27."
